--- a/visu.css
+++ b/visu.css
@@ -192,12 +192,19 @@
 
 }
 
-@media (max-width: 767px) {
+@media (min-width: 569px) and (max-width: 767px) {
 
 }
 
-/* Landscape phones and down */
-@media (max-width: 480px) {
+/* Portrait phones to Landscape */
+@media (min-width: 321px) and (max-width: 568px) {
+    .nw_tiles li {
+        width: 174px;
+    }
+}
+
+/* Portrait phones and down */
+@media (max-width: 320px) {
     .nw_min_landscape, .plot {
         display: none;
     }
