--- a/visu.css
+++ b/visu.css
@@ -34,17 +34,20 @@
     box-sizing: border-box;
     width: 100%;
     height: 50%;
-    padding: 20px;
+    position: relative;
 }
 
 .nw_tiles li {
+    box-sizing: border-box;
+    height: 80px;
+    width: 251px;
     border-width: 1px;
     border-style: outset;
     border-color: #777;
     display: block;
     float: left;
-    height: 66px;
-    width: 145px;
+    height: 82px;
+    width: 160px;
     padding: 7px 5px 7px 8px;
     float: left;
     margin: 0px;
@@ -52,7 +55,7 @@
     position: relative;
 }
 
-.nw_tiles .ui-li-has-thumb .ui-btn-inner {
+.ui-btn-inner {
     border: 0;
 }
 
@@ -87,12 +90,17 @@
     text-decoration: none;
 }
 
+.nw_list li {
+    box-sizing: border-box;
+    height: 40px;
+    line-height: 38px;
+}
+
 .nw_list .ui-li-divider {
-    margin-right: 2px;
+    padding: 0 0 0 10px;
 }
 .nw_list .ui-li-static.ui-li {
     padding: 0;
-    line-height: 42px;
 }
 .nw_list li:nth-child(odd) {
     background-color: #1d1d1d;
@@ -101,13 +109,19 @@
     background-color: #212121;
 }
 .nw_list img.icon {
-    height: 32px;
-    width: 32px;
+    height: 24px;
+    width: 24px;
+    margin-top: -7px;
 }
 .nw_list .ui-btn-up-a {
     border: 0;
 }
 
+.nw_list .rgb span, .nw_list .colordisc span {
+    width: 24px;
+    height: 24px;
+    margin-top: -7px;
+}
 .nw_table {
     width: 100%;
     height: 100%;
@@ -119,20 +133,23 @@
     display: table-cell;
     margin-right: 1px;
     text-align: center;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .nw_table_cell .nw_border {
-    border-style: outset;
     border-width: 1px;
-    border-color: #343434;
+    border-style: outset;
+    border-color: #777;
 }
 
 .nw_list > li > .nw_table > .nw_table_cell:first-child {
     text-align: left;
     padding-left: 10px;
-    border-style: outset;
     border-width: 1px;
-    border-color: #343434;
+    border-style: outset;
+    border-color: #777;
 }
 
 .nw_table_cell .ui-btn-inner {
@@ -169,18 +186,68 @@
     width: 260px;
 }
 
+
+.nw_tab-content {
+}
+
+.nw_tab-content .plot {
+    box-sizing: border-box;
+    margin: 20px;
+}
+.nw_tab-header {
+}
+
+.nw_tab-header a {
+    text-decoration: none;
+    display: block;
+    text-align: center;
+}
+
+.nw_tab-header ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.nw_tab-header li {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    height: 40px;
+    line-height: 38px;
+    box-sizing: border-box;
+    border-width: 1px;
+    border-style: outset;
+    border-color: #777;
+}
+
+.nw_tab-header li .ui-btn {
+    padding: 0;
+    margin: 0;
+}
+.nw_tab-header li .ui-btn .ui-btn-inner {
+    padding: 0;
+    margin: 0;
+}
+.nw_tab-header .ui-grid-a>:nth-child(n) {
+    margin: 0;
+}
+.nw_tab-header .ui-btn-up-a, .nw_tab-header .ui-btn-hover-a {
+    border: 0;
+}
+
 @media (min-width: 640px) {
     .content-primary {
         float: left;
         width: 50%;
-        margin: 0;
+        margin: 0 0 2px 0;
         padding: 0;
     }
 
     .content-secondary {
         width: 50%;
         position: fixed;
-        top: 62px;
+        top: 64px;
         right: 0;
         bottom: 0;
     }
@@ -193,8 +260,7 @@
 
 @media (min-width: 980px) {
 .nw_tiles li {
-    height: 66px;
-    width: 180px;
+    height: 80px;
     padding: 7px 5px 7px 10px;
 }
 .nw_tiles .ui-li-has-thumb .ui-btn-inner a.ui-link-inherit {
@@ -222,18 +288,33 @@
 
 
     .nw_tiles li {
-        width: 29%;
+        width: 33.33%;
     }
     .nw_list img.icon {
-        height: 48px;
-        width: 48px;
+        height: 32px;
+        width: 32px;
+    }
+}
+
+@media (max-width: 568px) {
+    .ui-page > .ui-header {
+        height: 46px;
+    }
+
+    .ui-header img.icon {
+        width: 32px;
+        height: 32px;
+    }
+
+    .ui-page > .ui-header .ui-title {
+        margin: 10px 0 6px 30px;
     }
 }
 
 /* Portrait phones to Landscape */
 @media (min-width: 321px) and (max-width: 568px) {
     .nw_tiles li {
-        width: 174px;
+        width: 189.33px;
     }
 }
 
