calculate the size of the plots according to their containers

--- a/visu.css
+++ b/visu.css
@@ -17,8 +17,6 @@
     }
 }
 
-
-
 .ui-page > .ui-header .ui-right {
     margin: 5px 5px 0 0;
     text-align: right;
@@ -35,6 +33,12 @@
     width: 100%;
     height: 50%;
     position: relative;
+}
+
+.nw_quad .plot {
+    box-sizing: border-box;
+    margin: 20px;
+    height: 100%;
 }
 
 .nw_tiles li {
@@ -188,11 +192,16 @@
 
 
 .nw_tab-content {
+    box-sizing: border-box;
+    margin: 20px;
+}
+
+.nw_tab-content > div {
+    height: 100%;
 }
 
 .nw_tab-content .plot {
-    box-sizing: border-box;
-    margin: 20px;
+    height: 100%;
 }
 .nw_tab-header {
 }
