Match header bar size on large screens
header bar is 65px in height, when max-width is above 1024px.

Signed-off-by: Bytesplit <bytesplit@googlemail.com>

--- a/visu.css
+++ b/visu.css
@@ -343,8 +343,14 @@
 
 }
 
-@media (min-width: 980px) {
+@media (min-width: 1025px) {
+    .content-primary {
+        top: 65px;
+    }
 
+    .content-secondary {
+        top: 65px;
+    }
 }
 
 /* Portrait tablet to landscape and desktop */
