--- a/visu.css
+++ b/visu.css
@@ -20,8 +20,12 @@
     margin: 20px 0 6px 0;
 }
 
+/* Get rid of scrollbars, could be problem for lots of content */
 .ui-content {
     padding: 0;
+    position: fixed;
+    top: 0;
+    bottom: 0;
 }
 
 .ui-content .ui-listview {
@@ -32,7 +36,6 @@
     overflow:auto;
     box-sizing: border-box;
     width: 100%;
-    height: 50%;
     position: relative;
 }
 
@@ -314,6 +317,18 @@
     border: 0;
 }
 
+/* Generally move content from top */
+.content-primary {
+    position: fixed;
+    top: 47px;
+}
+
+.content-secondary {
+    position: fixed;
+    top: 47px;
+}
+
+/* Start splitting primary and secondary content */
 @media (min-width: 640px) {
     .content-primary {
         width: 50%;
@@ -343,12 +358,8 @@
 
 }
 
+/* For bigger header, move down content */
 @media (min-width: 1025px) {
-    .ui-content {
-        position: fixed;
-        top: 0;
-        bottom: 0;
-    }
     .content-primary {
         top: 65px;
     }
@@ -358,7 +369,25 @@
     }
 }
 
+/* Show three tiles on bigger screen */
+@media (min-width: 980px) {
+    .nw_tiles li {
+        width: 33.33%;
+    }
+}
+
 /* Portrait tablet to landscape and desktop */
+/* Show two tiles on small screen */
+@media (min-width: 569px) and (max-width: 979px) {
+    .content-secondary .nw_tiles li {
+        width: 50%;
+    }
+    .nw_list img.icon {
+        height: 32px;
+        width: 32px;
+    }
+}
+
 @media (min-width: 768px) and (max-width: 979px) {
 
 }
@@ -368,13 +397,7 @@
 }
 
 @media (min-width: 569px) {
-    .nw_tiles li {
-        width: 33.33%;
-    }
-    .nw_list img.icon {
-        height: 32px;
-        width: 32px;
-    }
+
 }
 
 @media (max-width: 1024px) {
