--- a/visu.css
+++ b/visu.css
@@ -317,35 +317,23 @@
     border: 0;
 }
 
-/* Generally move content from top */
-.content-primary {
-    top: 47px;
-}
-
+/* We do not hide secondary content, we show it below */
 .content-secondary {
-    top: 47px;
+    display: block;
 }
-
 /* Start splitting primary and secondary content */
 
 @media (min-width: 640px) {
     .content-primary {
         width: 50%;
-        top: 47px;
         float: left;
         overflow: auto;
         margin: 0;
         padding: 0;
-        /*
-        float: left;
-        margin: 0 0 2px 0;
-        padding: 0;
-         */
     }
 
     .content-secondary {
         width: 50%;
-        top: 47px;
         float: right;
     }
 }
@@ -357,13 +345,7 @@
 
 /* For bigger header, move down content */
 @media (min-width: 1025px) {
-    .content-primary {
-        top: 65px;
-    }
 
-    .content-secondary {
-        top: 65px;
-    }
 }
 
 /* Show three tiles on bigger screen */
@@ -387,6 +369,7 @@
         height: 32px;
         width: 32px;
     }
+
 }
 
 @media (min-width: 768px) and (max-width: 979px) {
@@ -404,7 +387,7 @@
 @media (max-width: 1024px) {
     /* Header bar */
     .ui-page > .ui-header {
-        height: 45px;
+        height: 47px;
     }
 
     /* Header bar icons */
@@ -425,6 +408,9 @@
     }
     .nw_min_tablet {
         display: none;
+    }
+    .content-primary, .content-secondary {
+        width: 100%;
     }
 }
 
